--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 six==1.14.0
 sqlparse==0.3.1
+stripe==2.46.0
 typed-ast==1.4.1
 urllib3==1.25.9
 wrapt==1.11.2
